<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Ewic</string>
    <string name="warning">Warning</string>
    <string name="google_login_button">Log in</string>
    <string name="login_cancelled_message">In order to use this application, you need to log in with a Google account.</string>
    <string name="cancel">Cancel</string>
    <string name="toolbar_menu_my_data">My Data</string>
    <string name="toolbar_menu_my_reservations">My reservations</string>
    <string name="firstName">Name</string>
    <string name="lastName">Last Name</string>
    <string name="notification_email">Notification email</string>
    <string name="update_my_data">Update my data</string>
    <string name="delete_accout">Delete account</string>
    <string name="email_invalid_format">Invalid email format</string>
    <string name="update_data_successfully">The data has been updated correctly</string>
    <string name="pre_delete_message">Are you sure you want to delete your account? Your data cannot be recovered</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="account_delete_successfully">Account delete successfully</string>
    <string name="state">State</string>

    <string name="location_needed_message">The location is used to show the nearby stores and the distance to them.</string>
    <string name="request">Request</string>
    <string name="shopType">Shop type:</string>
    <string name="location">Location:</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="bookEntry">Book Entry</string>
    <string name="shop">Shop</string>
    <string name="date">Date</string>
    <string name="hour">Hour</string>
    <string name="remarks">Remarks</string>
    <string name="createReservation">Create Reservation</string>
    <string name="error_empty_field">Field can\'t be empty</string>
    <string name="error_bad_format_date">The date must follow the format dd/MM/yyyy</string>
    <string name="error_bad_format_hour">The hour must follow the formar HH:mm</string>
    <string name="error_past_reservation">Can\'t create reservations in the past</string>
    <string name="newReservation">New Reservation</string>
    <string name="reservation_create_successfully">Reservation create successfully</string>
    <string name="ACTIVE">Active</string>
    <string name="WAITING">Waiting</string>
    <string name="COMPLETED">Completed</string>
    <string name="NOT_APPEAR">Not appear</string>
    <string name="CANCELLED">Cancelled</string>
    <string name="pre_cancel_reservation_message">Are you sure you want to cancel this reservation? The change cannot be redone</string>
    <string name="accept">Accept</string>
    <string name="cancel_reservation_successfully">The reservation has been successfully canceled</string>
    <string name="update_reservation_successfully">The reservation has been successfully updated</string>
    <string name="update_reservation">Update reservation</string>
    <string name="error_shop_not_found">Shop not found</string>
    <string name="filter_shops">Filter shops</string>
    <string name="shop_filter_location_explanation">Order by proximity. Location is needed.</string>
    <string name="shop_name">Shop name</string>
    <string name="All">All</string>
    <string name="find_shops">Find Shops</string>
    <string name="find">Find</string>
    <string name="please_wait">Please wait.</string>
    <string name="updating_data">Updating data</string>
    <string name="connecting_server">Connecting to the server</string>
    <string name="updating_reservation">Updating reservation</string>
    <string name="creating_reservation">Creating reservation</string>
    <string name="retry">Retry</string>
    <string name="error_connect_server">Could not connect to server</string>
    <string name="error_server">An error has occurred, please retry the operation</string>
    <string name="error_rsv_duplicate">There is already a reservation for that time. Please choose another date</string>
    <string name="error_rsv_not_mutable_delete">The reservation can\'t be cancelled</string>
    <string name="timetable">Timetable</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="error_hour_invalid">Invalid hour. Please choose one of the list</string>
    <string name="error_shop_closed_weekDay">On the chosen day the store is closed. The date has not changed.</string>
    <string name="error_reservation_shop_full">The reservation cannot be saved for the number of clients on the indicated date.</string>
    <string name="check_timetable_help">* To consult the weekly timetable click on the clock icon</string>
    <string name="shop_timetable_not_defined">The store does not have a defined timetable</string>
    <string name="shops_not_found">No stores with those parameters were found. Please try other values.</string>
    <string name="reservations_not_found">You don\'t have any reservations yet. You can make your first reservation through the button or from the store information.</string>
    <string name="access_shop">Access shop</string>
    <string name="bluetooth_needed_message">In order to access a store it is necessary to have Bluetooth activated</string>
    <string name="activate">Activate</string>
    <string name="bluetooth_list_explanation">List of bluetooth devices found. Click on the one shown on the store device to enter.</string>
    <string name="bluetooth_searching_devices">Searching devices</string>
    <string name="bluetooth_devices_conected">Previously connected devices</string>
    <string name="bluetooth_new_devices">New devices</string>
    <string name="device">Device</string>
    <string name="bluetooth_connecting_device">Conecting to device</string>
    <string name="welcome_to">Welcome to</string>
    <string name="enjoy_visit">We hope you enjoy your visit.</string>
    <string name="exit_shop">Exit shop</string>
    <string name="bluetooth_exit_not_connection">Connection to the device could not be established.</string>
    <string name="bluetooth_exit_cancel">Leaving the store.</string>
    <string name="bluetooth_exit_lost_connection">Connection with the device has been lost. Leaving the store.</string>
    <string name="nClients">Number of clients</string>
    <string name="error_nClients_min">The minimum number of clients is 1.</string>
    <string name="error_nClient_max">The number of customers exceeds the maximum capacity of the store</string>
    <string name="client">client</string>
    <string name="clients">clients</string>
    <string name="bluetooth_location_needed">To find new devices it is necessary to have the location activated</string>
    <string name="last_filtering">Last filtering</string>
</resources>